# Cernel

./: .gitmodules  CMakeLists.txt  Makefile  concat.c  concat.py  main.cpp  my_concat.py  plugin.rel.o.h  syscalls.txt
.claude/: settings.local.json
external_app/: Makefile  bin2h.py  elfparse.cc  elfparse.h  file2header.py  function.c  plugin.ld
kernel/: CMakeLists.txt  context.s  kernel.c  kimpl.c
kernel/components/dload/: CmakeLists.txt  elfreloc_riscv.c  loader.c  loader.h
kernel/components/malloc/: malloc.c  malloc.h  malloc_bind.h
kernel/impl/: context.s  kimpl.c
kernel/include/: kernel.h  klogging.h  kmemory.h  kpipe.h  kthreads.h  ktstream.h
kernel/internal/: kinternal.h
kernel/src/: context.s  kcore.c  kernel.c  klogging.c  kmemory.c  kstream.c  kthreads.c  schedule.c
